=========
Changelog
=========

1.6.1 (unreleased)
==================

- Nothing changed yet.


1.6.0 (2017-11-07)
==================

- Fix `self.log()` after `configure()` when no log was emitted during
  `configure()`

- The Purge component now includes directories.

  This is not made an option as previously trying to purge directories would
  have raised an error and thus made deployments unusable anyway. Relying
  on this would be considered at least very bad practice and was never promised
  anyway.

- The `rsync` update method now deletes files on the target.

- The supervisor component uses current versions of buildout and setuptools,
  so they still work after PyPI recently disabled http without ssl.


1.6.0a3 (2017-08-09)
====================

- Ignore link-local (fe80::/64) IPv6 addresses in ``batou.utils.Address``.

- Fix: Grant database.* when using ``mysql.Grant``


1.6.0a2 (2017-07-04)
====================

- General update of batou's dependencies.

- Fix: Don't update ``git.Clone`` when there are incoming changes but the
  revision is fixed.


1.6.0a1 (2017-07-03)
====================

- Add a way to override DNS lookup during configuration, to better support
 migration scenarios.


1.5.0 (2017-06-23)
==================

- No changes to 1.5.0a6.


1.5.0a6 (2017-05-29)
====================

- Detect "no change" when using long revision ids in `mercurial.Clone()`.


1.5.0a5 (2017-05-21)
====================

- Fix `git.Clone()` verification of local state, so it only updates from remove
  if necessary. (#26117)


1.5.0a4 (2017-03-30)
====================

- Add `Component.log()` method to easily put out messages during configure/verify/update.


1.5.0a3 (2017-03-09)
====================

- Improve error reporting in multi host environments.


1.5.0a2 (2017-03-09)
====================

- Change `data-` attribute API to a simple dictionary. This is much more Python like.


1.5.0a1 (2017-03-07)
====================
