@@ -9,6 +9,6 @@ eggs = zc.buildout
 interpreter = py
 
 [versions]
-setuptools = 18.3.1
-zc.buildout = 2.4.3
-zc.recipe.egg = 2.0.2
+setuptools = 36.7.2
+zc.buildout = 2.9.5
+zc.recipe.egg = 2.0.4
